--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="ch05_ex1_email" default="default" basedir=".">
-    <description>Builds, tests, and runs the project ch05_ex1_email.</description>
+<project name="hw4" default="default" basedir=".">
+    <description>Builds, tests, and runs the project hw4.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
