--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Joel\\AppData\\Roaming\\NetBeans\\8.0\\tomcat80.properties
+deploy.ant.properties.file=/Users/xeniazantello/Library/Application Support/NetBeans/8.1/tomcat80.properties
 j2ee.server.domain=C:/Users/Joel/AppData/Roaming/NetBeans/7.4/apache-tomcat-7.0.41.0_base
-j2ee.server.home=C:/tomcat-8.0
-j2ee.server.instance=tomcat80:home=C:\\tomcat-8.0
+j2ee.server.home=/Applications/apache-tomcat-8.5.5
+j2ee.server.instance=tomcat80:home=/Applications/apache-tomcat-8.5.5
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\Joel\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=/Users/xeniazantello/Library/Application Support/NetBeans/8.1/build.properties
